deploy/dev/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: chess-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chess-frontend
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: chess-frontend
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
          image: frontend-placeholder
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: logs
              mountPath: /var/log/nginx
            - name: cache
              mountPath: /var/cache/nginx
            - name: npm-cache
              mountPath: /home/node/.npm   # Mount a writable directory for npm cache

      volumes:
        - name: logs
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: npm-cache
          emptyDir: {}
