deploy/dev/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-frontend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: chess-frontend
